Bug 377176 - 'onion skin' not available for new layer if you move frames from another layer on it
Summary: 'onion skin' not available for new layer if you move frames from another laye...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 3.1.2
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-03 17:54 UTC by gordie.lachance+dev
Modified: 2017-03-29 11:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gordie.lachance+dev 2017-03-03 17:54:02 UTC
Hey, 'onion skin' property for a NEW layer is not available if you move frames from another layer on it without having created other frames first.

steps to reproduce :
- create a new layer
- move frames from another layer on it
Comment 1 z-uo 2017-03-10 15:37:36 UTC
I confirm this bug, this also appear when you first copy a frame on a new layer
Comment 2 Dmitry Kazakov 2017-03-23 14:03:35 UTC
Git commit 405b0061330cfb82f827516c20c75e07164d9d07 by Dmitry Kazakov.
Committed on 23/03/2017 at 14:03.
Pushed by dkazakov into branch 'kazakov/svg-loading'.

Upgrade the layer to an animated one when the first frame is added

M  +1    -0    libs/image/kis_paint_layer.cc

https://commits.kde.org/krita/405b0061330cfb82f827516c20c75e07164d9d07
Comment 3 Dmitry Kazakov 2017-03-29 11:03:15 UTC
Git commit a2a2308d0ecfd0d6f9f3c7638cab3af1fe82526a by Dmitry Kazakov.
Committed on 29/03/2017 at 10:03.
Pushed by dkazakov into branch 'krita/3.1'.

Upgrade the layer to an animated one when the first frame is added

M  +1    -0    libs/image/kis_paint_layer.cc

https://commits.kde.org/krita/a2a2308d0ecfd0d6f9f3c7638cab3af1fe82526a