Upgrade the layer to an animated one when the first frame is added

BUG:377176